Updates for the build and test